# DadKnowsSiegeBest

./: .gitignore  README.md  pyproject.toml  raw_llm_output.json
godotproject/: .gitignore  AgentPolicies.gd  CircleShader.tres  Enemy.tscn  EnemySpawner.gd  HPBillboard.gd  IntroText.gd  LevelUI.gd  Shake.gd  WeaponPickup.gd  WeaponPickup.tscn  audio_stream_player.gd  battlefield.gd  clouds.tscn  environement.gd  icon.svg.import  llm_call.gd  loser_menu.gd  loser_menu.tscn  menu.gd  menu.tscn  path_follow_3d.gd  project.godot  prompts.gd  test_audio.tscn  tts.gd
godotproject/Assets/: Introduction.tscn  NavMesh.tscn  beating_meat_cuts.mp3.import  camera_intro.gd  canon_cut.mp3.import  metalic_clics_cut.mp3.import  sand_falling_cuts.mp3.import
godotproject/Assets/Audio/: Voice_Of_valor_loop.mp3.import  beating_meat_cuts.mp3.import  canon_cut.mp3.import  gong.mp3.import  intro_voice.mp3.import  metalic_clics_cut.mp3.import  sand_falling_cuts.mp3.import
godotproject/Assets/Fonts/: bagnard.regular.otf.import
godotproject/Assets/Images/: base_grass.png.import  cartoon-grass-leaves-clip-art-free-png.webp.import  crosshair.png.import  grass.png.import  skybox_drawn.jpg.import  vector_grass-clean.png.import  vector_grass.png.import
godotproject/entities/: Enemy.gd  Turret.gd
godotproject/scenes/: AgentPolicies.tscn  Enemy.tscn  LevelUI.tscn  Obstacle.tscn  Turret.tscn  camera_path.tscn  test.tscn  winner_menu.tscn
godotproject/scripts/: CameraHandler.gd  Container.gd  Raycast.gd  camera_top.gd  intro.gd
godotproject/ui/: DebugUI.gd  promptUI.gd  winner_menu.gd
(+94 files in other folders)
